# RPIA_answer

./: README.md  RPIA.ipynb  pyproject.toml  test_func.py
src/: test_func.py
src/test_module_01/: test_func.py
src/test_module_02/: test_func.py
