[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RPIA"
version = "0.1.0"
description = "A Python package for simulating derivatives using PDEs and Monte Carlo methods"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]




